ДЗ сайт - обновление файлов

--- a/catalog.html
+++ b/catalog.html
@@ -1,72 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-	<head>
-	    <meta charset="UTF-8">
-	    <title>My shop</title>
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title>Catalog - My site</title>
+</head>
 
-	<body>
-
-	    <ul>
-	        <li>
-	        	<a href="index.html">Main</a>
-	        </li>
-	        <li>
-	        	<a href="catalog.html">Catalog</a>
-	        </li>
-	        <li>
-	        	<a href="contaсts.html">Contacts</a>
-	        </li>
-	    </ul>
-
-	    <h1>Catalog</h1>
-
-	    <a href="contaсts.html">
-	    	<img src="../logo.png" alt="">
-	    </a>
-
-	    <table> 
-	    	<caption>Каталог товаров</caption>
-	    	 <tr>
-		    	<th>Номер</th>
-		    	<th>Название</th>
-		    	<th>Артикул</th>
-		    	<th>Цена</th>
-		    	<th>Количество</th>
-	    	</tr>
-
-	    	<tr>
-	    		<td>1</td>
-	    		<td>Яблоко</td>
-	    		<td>54</td>
-	    		<td>50 руб.</td>
-	    		<td>x 10 шт.</td>
-	    	</tr>
-	    	<tr>
-	    		<td>2</td>
-	    		<td>Банан</td>
-	    		<td>242</td>
-	    		<td>10 руб.</td>
-	    		<td>x 12 шт.</td>
-	    	</tr>
-	    		    	<tr>
-	    		<td>3</td>
-	    		<td>Вишня</td>
-	    		<td>534</td>
-	    		<td>80 руб.</td>
-	    		<td>x 15 шт.</td>
-	    	</tr>
-
-
-
-	    </table>
-
-		
-		
-
-			 
-
-	</body>
+<body>
+    <img src="img/logo.jpg" alt="logo" height="auto" width="100">
+    <ul>
+        <li>
+            <a href="index.html">Main</a>
+        </li>
+        <li>
+            <a href="catalog.html">Catalog</a>
+        </li>
+        <li>
+            <a href="contaсts.html">Contacts</a>
+        </li>
+    </ul>
+    <h1 align="center">Catalog</h1>
+    <p align="justify"><strong>lorem</strong> ipsum <em>dolor</em> sit amet, <a href="catalog.html">consectetuer</a> adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla <a href="catalog.html">facilisi</a>.</p>
+    <table>
+        <caption>Каталог товаров</caption>
+        <tr>
+            <th>Номер</th>
+            <th>Название</th>
+            <th>Артикул</th>
+            <th>Цена</th>
+            <th>Количество</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Яблоко</td>
+            <td>54</td>
+            <td>50 руб.</td>
+            <td>x 10 шт.</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Банан</td>
+            <td>242</td>
+            <td>10 руб.</td>
+            <td>x 12 шт.</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Вишня</td>
+            <td>534</td>
+            <td>80 руб.</td>
+            <td>x 15 шт.</td>
+        </tr>
+    </table>
+</body>
 
 </html>
