--- a/index.html
+++ b/index.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-	<head>
-	    <meta charset="UTF-8">
-	    <title>My shop</title>
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title>Main - My site</title>
+</head>
 
-	<body>
-
-	    <ul>
-	        <li>
-	        	<a href="index.html">Main</a>
-	        </li>
-	        <li>
-	        	<a href="catalog.html">Catalog</a>
-	        </li>
-	        <li>
-	        	<a href="contaсts.html">Contacts</a>
-	        </li>
-	    </ul>
-
-	    <h1>Main page</h1>
-		<p>text <br> <em>text</em></p>
-
-		<h2>Zag h2</h2>
-		<p><strong>strong text</strong></p>
-
-		<ul type="disc">
-			<li>xz</li>
-			<li>xz</li>
-			<li>xz</li>
-			<li>xz</li>
-			<li>xz</li>
-		</ul>
-
-		<h3>Zag h3</h3>
-
-		<blockquote cite="yandex.ru">Цитата</blockquote>
-
-		
-
-
-
-	</body>
+<body>
+    <img src="img/logo.jpg" alt="logo" height="auto" width="100">
+    <ul>
+        <li>
+            <a href="index.html">Main</a>
+        </li>
+        <li>
+            <a href="catalog.html">Catalog</a>
+        </li>
+        <li>
+            <a href="contaсts.html">Contacts</a>
+        </li>
+    </ul>
+    <h1 align="center">Main page</h1>
+    <p align="justify"><strong>lorem</strong> ipsum <em>dolor</em> sit amet, <a href="catalog.html">consectetuer</a> adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla <a href="catalog.html">facilisi</a>.</p>
+    <p align="justify"><b>Sed</b> ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
+    <h2 align="center">Headline h2</h2>
+    <p align="justify">lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+    <p align="justify">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
+    <ol type="1">
+        <li>Item text</li>
+        <li>Item text</li>
+        <li>Item text</li>
+        <li>Item text</li>
+        <li>Item text</li>
+    </ol>
+    <h3 align="center">Headline h3</h3>
+    <p align="justify">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
+    <br>
+    <blockquote cite="yandex.ru">Цитата</blockquote>
+</body>
 
 </html>
