--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Главная - Health and Eating</title>
+    <title>Контакты - Health and Eating</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -37,29 +37,33 @@
             <div id="content">
                 <div class="content-in">
 
-                    <h1>Добро пожаловать !</h1>
+                    <h1>Контакты</h1>
 
-                    <img class="img-left" src="img/pic01.jpg" alt="">
+                    <p><strong>Если у вас есть какие либо вопросы, Вы всегда сможете с нами связаться через контактную форму обратной связи:</strong></p>
 
-                    <p>Мы рады Вас приветствовать на сайте <strong>Health and Eating!</strong></p>
+                    <form action="#" method="post">
+                        <fieldset>
+                            <div>
+                                <label for="name">Имя</label>
+                                <input type="text" name="" id="name" placeholder="Введите ваше имя" required>
+                            </div>
 
-                    <p>Цель нашего проекта – помочь Вам разобраться в правильном и здоровом питании. На сайте Вы также сможете найти <a href="blog.html">статьи и материалы</a> которые посвященны диетам, полезным рецептам, лечебному питанию, характеристикам и совместимости пищевых продуктов, информацию по витаминам, минералам, биодобавкам.</p>
+                            <div>
+                                <label for="email">Email</label>
+                                <input type="email" name="" id="email" placeholder="Введите ваш email" required>
+                            </div>
 
-                    <p>Также, в ближайшее время заработает <a href="shop.html">онлайн интернет магазин</a> - где вы сможете приобрести витамины, биодобавки и другие сопутствующие товары!</p>
+                             <div>
+                                 <label for="text_area">Ваше сообщение</label>
+                                 <textarea rows="6" id="text_area"></textarea>
+                             </div>
 
-                    <div class="clear"></div>
 
-                    <h2>Зачем это нужно мне?</h2>
+                            <br>
+                            <input type="submit" name="" value="Отправить">
+                        </fieldset>
+                    </form>
 
-                    <img class="img-right" src="img/pic02.jpg" alt="">
-
-                    <p>Все знают, что к составлению ежедневного рациона питания нужно подходить ответственно. Те продукты, которые мы употребляем, влияют на наше самочувствие, состояние здоровья и настроение.Здоровый образ жизни за последние годы приобрел множество поклонников. Мы стали больше заботиться о себе - поменяли свои жизненные привычки, в том числе и в питании.</p>
-
-                    <p>Если Вы еще не решились на подобные шаги, то можете с легкостью это сделать найдя рекомендации на нашем сайте. Здоровье – это наше богатство, предлагаем не откладывать изменения в своей жизни на завтра, а сделать это сегодня!</p>
-
-                    <p>Надеемся Вам здесь будет интересно!</p>
-
-                    <p><em>С уважением -  Health and Eating</em></p>
                 </div>
             </div>
 
