сайт дз - исправление дубликатов id (в contacts.html)

--- a/contacts.html
+++ b/contacts.html
@@ -81,16 +81,16 @@
                     <form action="#" method="post">
                         <fieldset>
                             <div>
-                                <label for="name">Имя</label>
-                                <input type="text" name="" id="name" placeholder="Введите ваше имя" required>
+                                <label for="name-reg">Имя</label>
+                                <input type="text" name="" id="name-reg" placeholder="Введите ваше имя" required>
                             </div>
 
                             <div>
-                                <label for="email">Email</label>
-                                <input type="email" name="" id="email" placeholder="Введите ваш email" required>
+                                <label for="email-reg">Email</label>
+                                <input type="email" name="" id="email-reg" placeholder="Введите ваш email" required>
                             </div>
                             <br>
-                            <input type="submit" name="form_reg" value="Отправить">
+                            <input type="submit" name="" value="Отправить">
                         </fieldset>
                     </form>
                         <br><br>
@@ -108,11 +108,11 @@
                                 </div>
 
                                  <div>
-                                     <label for="poll_mess">Свой вариант</label>
-                                     <textarea rows="3" id="poll_textarea"></textarea>
+                                     <label for="poll-mess">Свой вариант</label>
+                                     <textarea rows="3" id="poll-mess""></textarea>
                                  </div>
                                 <br>
-                                <input type="submit" name="form_poll" value="Отправить">
+                                <input type="submit" name="" value="Отправить">
                             </fieldset>
                         </form>
                     
