ДЗ доработка сайта: доработка на флексбоксе каталога товаров -  shop.html, правка форм, мелкие правки по сайту

--- a/blog.html
+++ b/blog.html
@@ -103,7 +103,8 @@
             <div class="col-3" >
                 <div class="cont-right-in">
                     <h2>Разделы:</h2>
-                    <ul>
+                    <hr>
+                    <ul class="menu2">
                         <li><a href="#">Правильное и здоровое питание</a></li>
                         <li><a href="#">Лечебное питание</a></li>
                         <li><a href="#">Питание для похудения</a></li>
