--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                     <p>Цель нашего проекта – помочь Вам разобраться в правильном и здоровом питании. На сайте Вы также сможете найти <a href="blog.html">статьи и материалы</a> которые посвященны диетам, полезным рецептам, лечебному питанию, характеристикам и совместимости пищевых продуктов, информацию по витаминам, минералам, биодобавкам.</p>
 
-                    <p>Также, в ближайшее время заработает <a href="shop.html">онлайн интернет магазин</a> - где вы сможете приобрести витамины, биодобавки и другие сопутствующие товары!</p>
+                    <p>Вы также можете посетить наш <a href="shop.html">онлайн интернет магазин</a> - где вы сможете приобрести витамины, биодобавки и другие сопутствующие товары!</p>
 
                     <div class="row"></div>
 
@@ -72,12 +72,13 @@
             <!-- CONTENT RIGHT -->
             <div class="col-3" >
                 <div class="cont-right-in">
-                    <h3>Регистрация:</h3>
+                    <h2>Регистрация:</h2>
+                    <hr>
 
                     <form action="#" method="post">
                         <fieldset>
                             <div>
-                                <label for="name">Имя</label>
+                                <label for="name">Имя&nbsp;&nbsp;</label>
                                 <input type="text" name="" id="name" placeholder="Введите ваше имя" required>
                             </div>
 
@@ -86,13 +87,14 @@
                                 <input type="email" name="" id="email" placeholder="Введите ваш email" required>
                             </div>
                             <br>
-                            <input type="submit" name="form_reg" value="Отправить">
+                            <input class="btn" type="submit" name="form-reg" value="Отправить">
                         </fieldset>
                     </form>
                         <br><br>
 
-                        <h3>Опрос:</h3>
-                        <p>Какие новые разделы блога вы хотели бы видеть на нашем сайте?</p>
+                    <h2>Опрос:</h2>
+                    <hr>
+                    <p>Какие новые разделы блога вы хотели бы видеть на нашем сайте?</p>
 
                     <form action="#" method="post">
                         <fieldset>
@@ -105,15 +107,16 @@
 
                              <div>
                                  <label for="poll_mess">Свой вариант</label>
-                                 <textarea rows="3" id="poll_textarea"></textarea>
+                                 <textarea rows="" class="right-textarea" id="textarea-poll"></textarea>
                              </div>
                             <br>
-                            <input type="submit" name="form_poll" value="Отправить">
+                            <input class="btn" type="submit" name="form-poll" value="Отправить">
                         </fieldset>
                     </form>
                     
                 </div>
             </div>
+
         </div>
         
         <!-- FOOTER -->
