--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Контакты - Health and Eating</title>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width">
+    <meta name="description" content="" >
+    <meta name="keywords" content="" >
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
